<resources>
    <string name="app_name">crud_room</string>
    <string name="person">Person</string>
    <string name="category">Category</string>
    <string name="doctor">Doctor</string>
    <string name="appointment">Appointment</string>
    <string name="name">Name</string>
    <string name="id">Id</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="age">Age</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="ok">Ok</string>
    <string name="patient">Patient</string>
    <string name="search">Search</string>
    <string name="gender">Gender</string>
    <string name="gender_of_patient">Gender of Patient</string>
    <string name="category_of_doctor">Category of Doctor</string>
</resources>