<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewCategory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageViewAvatarDoctor"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="16dp"
                android:src="@drawable/ic_add_appointment"
                app:layout_constraintBottom_toTopOf="@+id/floating_action_buttonDeleteAppointment"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextFieldIdAppointment"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:enabled="false"
                android:hint="@string/id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewAvatarDoctor"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextIdAppointment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextFieldDoctorAppointment"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:enabled="false"
                android:hint="@string/doctor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewAvatarDoctor"
                app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldIdAppointment">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/autoCompleteDoctorAppointment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="17dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextFieldDoctorCategoryAppointment"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:enabled="false"
                android:hint="@string/category_of_doctor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewAvatarDoctor"
                app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldDoctorAppointment">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextDoctorCategoryAppointment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextFieldPatientAppointment"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:enabled="false"
                android:hint="@string/patient"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewAvatarDoctor"
                app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldDoctorCategoryAppointment">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/autoCompletePatientAppointment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="17dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextFieldPatientGenderAppointment"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:enabled="false"
                android:hint="@string/gender_of_patient"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewAvatarDoctor"
                app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldPatientAppointment">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTexPatientGenderAppointment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floating_action_buttonDeleteAppointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_margin="16dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/delete"
                app:borderWidth="0dp"
                app:fabSize="mini"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_delete"
                tools:ignore="RtlHardcoded" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floating_action_buttonUpdateAppointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/edit"
                app:borderWidth="0dp"
                app:fabSize="mini"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageViewAvatarDoctor"
                app:srcCompat="@drawable/ic_edit"
                tools:ignore="RtlHardcoded" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floating_action_buttonSaveAppointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/edit"
                android:visibility="invisible"
                app:borderWidth="0dp"
                app:fabSize="mini"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageViewAvatarDoctor"
                app:srcCompat="@drawable/ic_check"
                tools:ignore="RtlHardcoded" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>