<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AppointmentFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldsearchAppointment"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/search"
        app:layout_constraintEnd_toStartOf="@+id/floating_action_buttonSearchAppointment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choice_chips">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/autocompleteSearchAppointment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="17dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_buttonSearchAppointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/delete"
        app:borderWidth="0dp"
        app:fabSize="mini"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choice_chips"
        app:srcCompat="@drawable/ic_search"
        tools:ignore="RtlHardcoded" />

    <include
        android:id="@+id/choice_chips"
        layout="@layout/choice_chips_filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <com.google.android.material.chip.Chip-->
    <!--        android:id="@+id/chip4"-->
    <!--        style="@style/Widget.MaterialComponents.Chip.Choice"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_margin="10dp"-->
    <!--        android:text="@string/gender"-->
    <!--        app:layout_constraintEnd_toStartOf="@id/chip5"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--    <com.google.android.material.chip.Chip-->
    <!--        android:id="@+id/chip5"-->
    <!--        style="@style/Widget.MaterialComponents.Chip.Choice"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_margin="10dp"-->
    <!--        android:text="@string/category"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/chip4"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewAppointment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldsearchAppointment"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_appointment" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_buttonAddAppointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/edit"
        app:borderWidth="0dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add"
        tools:ignore="RtlHardcoded" />

</androidx.constraintlayout.widget.ConstraintLayout>